--- a/colors.ini
+++ b/colors.ini
@@ -12,20 +12,22 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #1F1F1F
+background = #2C2C2C
 foreground = #FFFFFF
 foreground-alt = #8F8F8F
 gray = #191919
 
 ;; shades
 shade1 = #0D47A1
-shade2 = #228744
-shade22 = #06491C
-shade33 = #043013
-shade3 = #0A7A30
-shade4 = #086126
+shade2 = #0a7a30
+shade3 = #086126
+shade4 = 
 shade5 = #2196F3
 shade6 = #09A044
 shade7 = #64B5F6
 shade8 = #0BD359
+shade9 = #00894b
+shade10 = #007b43
+shade11 = #006d3c
+shade12 = #005f34
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
