--- a/config.ini
+++ b/config.ini
@@ -23,6 +23,7 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
+include-file = ~/.config/polybar/user_modules.ini
 include-file = ~/.config/polybar/bars.ini
 include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
@@ -105,7 +106,8 @@ underline-color = ${color.foreground}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-size = 0
+border-size = 5pt
+line-size = 4pt
 border-color = ${color.background}
 
 ; Number of spaces to add at the beginning/end of the bar
@@ -141,7 +143,7 @@ font-3 = Font Awesome 5 Brands Regular:style=Regular
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = workspaces 
+modules-left = launcher workspaces
 modules-center = xwindow 
 modules-right = updates battery cpu memory pulseaudio date 
 
